--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2>HTML formulário</h2>
 
-<form action="">
+<form action="teste.html">
   <label for="fname">Nome:</label><br>
   <input type="text" id="fname" name="fname" value="Bryan"><br>
   <label for="lname">Sobrenome:</label><br>
