--- a/teste.html
+++ b/teste.html
@@ -6,7 +6,7 @@
 
 <p>Selecione <strong>a sua data</strong> de aniversário.</p>
 
-<form action="/action_page.php">
+<form action="segundo.html">
   <label for="birthday">Aniversário:</label>
   <input type="date" id="birthday" name="birthday">
   <input type="submit" value="Confirmar">
